boton reset y estilo

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <script src = 'js/scripts.js'></script>
     <title>Fast Clicking</title>
   </head>
   <body>
-
-  <button type="button" id="start">Empezar!</button>
-
-  <div class="game-container" id="prueba">
-    <button type="button" class="game" id="1" disabled>01</button>
-    <button type="button" class="game" id="2" disabled>02</button>
-    <button type="button" class="game" id="3" disabled>03</button>
-    <button type="button" class="game" id="4" disabled>04</button>
-    <button type="button" class="game" id="5" disabled>05</button>
-  </div>
+    <button type="button" id="reset">Reset</button>
+    <button type="button" id="start">Start</button>
+    <div class="game-container" id="prueba">
+      <button type="button" class="game" id="1" disabled>01</button>
+      <button type="button" class="game" id="2" disabled>02</button>
+      <button type="button" class="game" id="3" disabled>03</button>
+      <button type="button" class="game" id="4" disabled>04</button>
+      <button type="button" class="game" id="5" disabled>05</button>
+    </div>
 
   </body>
 </html>
