--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
@@ -11,6 +12,7 @@
   <body>
     <button type="button" id="reset">Reset</button>
     <button type="button" id="start">Start</button>
+    <label id="lvlup">Level UP</label>
     <div class="game-container" id="prueba">
       <button type="button" class="game" id="1" disabled>01</button>
       <button type="button" class="game" id="2" disabled>02</button>
