countdown y arreglo de bugs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>Fast Clicking</title>
   </head>
   <body>
-    <button type="button" id="reset">Reset</button>
+    <div class="header">
+      <label id="countdown"></label>
+      <button type="button" id="reset">Reset</button>
+    </div>
     <button type="button" id="start">Start</button>
     <label id="lvlup">Level UP</label>
     <div class="game-container" id="prueba">
