--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <label id="countdown"></label>
       <button type="button" id="reset">Reset</button>
     </div>
-    <button type="button" id="start">Start</button>
-    <label id="lvlup">Level UP</label>
+      <button type="button" id="start">Start</button>
+      <label id="lvlup">Level UP</label>
+      <button type="button" id="re">Volver a Jugar</button>
     <div class="game-container" id="prueba">
       <button type="button" class="game" id="1" disabled>01</button>
       <button type="button" class="game" id="2" disabled>02</button>
