arreglo de bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <script src = 'js/scripts.js'></script>
     <title>Fast Clicking</title>
@@ -23,6 +22,11 @@
       <button type="button" class="game" id="3" disabled>03</button>
       <button type="button" class="game" id="4" disabled>04</button>
       <button type="button" class="game" id="5" disabled>05</button>
+      <button type="button" class="game" id="6" disabled>06</button>
+      <button type="button" class="game" id="7" disabled>07</button>
+      <button type="button" class="game" id="8" disabled>08</button>
+      <button type="button" class="game" id="9" disabled>09</button>
+      <button type="button" class="game" id="10" disabled>10</button>
     </div>
 
   </body>
