added level indicator

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <body>
     <div class="header">
       <label id="countdown"></label>
+      <label id="level"></label>
       <button type="button" id="reset">Reset</button>
     </div>
       <button type="button" id="start">Start</button>
       <label id="lvlup">Level UP</label>
       <button type="button" id="re">Volver a Jugar</button>
-    <div class="game-container" id="prueba">
+    <div class="game-container">
       <button type="button" class="game" id="1" disabled>01</button>
       <button type="button" class="game" id="2" disabled>02</button>
       <button type="button" class="game" id="3" disabled>03</button>
