--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   </head>
   <body>
     <div class="header">
-      <label id="countdown"></label>
-      <label id="level"></label>
-      <button type="button" id="reset">Reset</button>
+      <div>
+        <label id="level"></label>
+        <label id="countdown"></label>
+      </div>
+      <div>
+        <button type="button" id="reset">Reset</button>
+      </div>
     </div>
       <button type="button" id="start">Start</button>
       <label id="lvlup">Level UP</label>
